refacror: group service